# chaincode/token/main.go
@@ -4,13 +4,11 @@ import (
 	"fmt"
 	"github.com/chaincode_learning_go/chaincode/token/domain"
 	"github.com/chaincode_learning_go/chaincode/token/repo"
+	_ "github.com/chaincode_learning_go/chaincode/token/repo"
 	"github.com/chaincode_learning_go/chaincode/token/service"
 	"github.com/hyperledger/fabric/core/chaincode/shim"
-	"strconv"
-	"time"
-
-	_ "github.com/chaincode_learning_go/chaincode/token/repo"
 	sc "github.com/hyperledger/fabric/protos/peer"
+	"strconv"
 )
 
 var mainLogger = shim.NewLogger("main")
@@ -39,15 +37,26 @@ func (s *SmartContract) Invoke(APIstub shim.ChaincodeStubInterface) sc.Response 
 			CurrentAmount: 0,
 			Creator:       args[3],
 			Issuer:        args[4],
-			CreatedTime:   time.Now(),
 		}
 		return service.CreateToken(APIstub, requestId, token)
 	case "IssueToken":
 		requestId := args[0]
 		userName := args[1]
-		tokenType := args[2]
+		tokenName := args[2]
 		tokenAmount, _ := strconv.Atoi(args[3])
-		return service.IssueToken(APIstub, requestId, userName, tokenType, int64(tokenAmount))
+		return service.IssueToken(APIstub, requestId, userName, tokenName, int64(tokenAmount))
+	case "GetToken":
+		//requestId := args[0]
+		userName := args[1]
+		tokenName := args[2]
+		return service.GetToken(APIstub, userName, tokenName)
+	case "TransferToken":
+		requestId := args[0]
+		fromUserName := args[1]
+		toUserName := args[2]
+		tokenName := args[3]
+		tokenAmount, _ := strconv.Atoi(args[4])
+		return service.TransferToken(APIstub, requestId, fromUserName, toUserName, tokenName, int64(tokenAmount))
 	}
 
 	return shim.Error("Invalid Smart Contract function name.")
